--- a/product-service-first.properties
+++ b/product-service-first.properties
@@ -1,3 +1,3 @@
 server.port=8881
-
+me=anewperson@gmail.com
 eureka.instance.instanceId=${spring.application.name}:${spri‌​ng.application.insta‌​nce_id:${random.valu‌​e}}
