--- a/product-service-seconde.properties
+++ b/product-service-seconde.properties
@@ -1,3 +1,3 @@
 server.port=8882
-
+me=anotherperson@gmail.com
 eureka.instance.instanceId=${spring.application.name}:${spri‌​ng.application.insta‌​nce_id:${random.valu‌​e}}
