--- a/product-service.properties
+++ b/product-service.properties
@@ -1,2 +1,3 @@
+server.port=8880
 me=imedzenned@yahoo.fr
-eureka.instance.instanceId=${spring.application.name}:${spri‌​ng.application.insta‌​nce_id:${random.valu‌​e}}
+#eureka.instance.instanceId=${spring.application.name}:${spri‌​ng.application.insta‌​nce_id:${random.valu‌​e}}
